Create api specific mapper folders. Move Ticketmaster mappers to Ticketmaster folders.

--- a/GigSonar.csproj
+++ b/GigSonar.csproj
@@ -20,4 +20,8 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Mappers\Geocode_Mappers\" />
+    </ItemGroup>
+
 </Project>
