Create Geocode DTO folders with separate folders for forward & reverse geocode DTOs

--- a/GigSonar.csproj
+++ b/GigSonar.csproj
@@ -21,6 +21,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="DTOs\Geocode_DTOs\Forward_geocode_DTOs\" />
+      <Folder Include="DTOs\Geocode_DTOs\Reverse_geocode_DTOs\" />
       <Folder Include="Mappers\Geocode_Mappers\" />
     </ItemGroup>
 
