--- a/GigSonar.csproj
+++ b/GigSonar.csproj
@@ -20,4 +20,13 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DTOs\Geocode\Forward\" />
+      <Folder Include="DTOs\Geocode\Reverse\" />
+      <Folder Include="DTOs\Ticketmaster\Search_attractions\" />
+      <Folder Include="DTOs\Ticketmaster\Search_events\" />
+      <Folder Include="Mappers\Geocode_Mappers\" />
+      <Folder Include="Mappers\Ticketmaster_Mappers\" />
+    </ItemGroup>
+
 </Project>
