Updated context and main for adding items to db.

--- a/GigSonar.csproj
+++ b/GigSonar.csproj
@@ -35,6 +35,7 @@
       <Folder Include="DTOs\Geocode\Forward\" />
       <Folder Include="DTOs\Geocode\Reverse\" />
       <Folder Include="Mappers\Geocode\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
