Adjust GigSonarBackend namespace and fix namespace issues.

--- a/GigSonarBackend/GigSonar.csproj
+++ b/GigSonarBackend/GigSonar.csproj
@@ -5,6 +5,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>GigSonarBackend</AssemblyName>
+        <RootNamespace>GigSonarBackend</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
